# pong_game

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
docs/: GameDesign.puml
docs/vscode_config/: tasks.json
game/: CMakeLists.txt
game/include/: Ball.hpp  Game.hpp  GameConfig.hpp  GameObject.hpp  InputHandler.hpp  Paddle.hpp  Physics.hpp  Renderer.hpp  SpdlogConfig.hpp  WindowManager.hpp
game/shaders/: fragment_shader.glsl  vertex_shader.glsl
game/src/: Ball.cpp  Game.cpp  GameObject.cpp  InputHandler.cpp  Paddle.cpp  Physics.cpp  Renderer.cpp  WindowManager.cpp  main.cpp
src/: CMakeLists.txt  main.cpp
